fixed win piles size on smaller screens

--- a/src/styles/scss/BoardElement.module.scss
+++ b/src/styles/scss/BoardElement.module.scss
@@ -35,13 +35,13 @@
 
 .clubs, .spades, .hearts, .diamonds {
   & svg {
-    height: 100%;
+    max-height: 100%;
     width: auto;
     position: absolute;
     inset: 0;
   }
   width: fit-content;
-  height: 100%;
+  height: fit-content;
 }
 
 .deck {
